# test_strawberry_django

./: .gitignore  README.md  manage.py  pyproject.toml
categories/: models.py  types.py
components/: models.py  schema.py  serializers.py  tests.py  types.py  urls.py  views.py
components/management/commands/: create_users.py
test_strawberry_django/: asgi.py  settings.py  urls.py  wsgi.py
